--- a/src/index.css
+++ b/src/index.css
@@ -4,87 +4,143 @@ body {
   font-family: "poppins", sans-serif;
   background-color: black;
   color: white;
-  overflow: hidden;
-}
-.header {
-  display: flex;
-  flex-direction: row;
-  height: 100%;
+  overflow-x: hidden;
 }
 .main-container {
-  margin-right: auto;
-  margin-left: auto;
   display: flex;
-  gap: 20px;
-  width: 60%;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  flex-direction: row;
+  gap: 10px;
 }
-@media (max-width : 600px){
+@media (max-width : 1000px){
   .main-container{
-    width: 90%;
+    flex-direction: column;
+  }
+  .left{
+    min-width: calc(100% - 5px);
+    min-height: 630px;
+  }
+  .btn{
+    font-size: 24px;
+  }
+  .right{
+    margin: 40px 0px;
+    min-width: calc(100% - 5px);
+  }
+  .voice{
+    margin-bottom: 40px;
   }
 }
-.main-container > h1 {
+@media (max-width : 600px){
+  .btn{
+    font-size: 20px;
+  }
+}
+.left {
+  background-color: rgb(228, 236, 234);
+  width: 30%;
+  height: calc(100% - 20px);
+  color: black;
+  border-radius: 10px;
+  backdrop-filter: blur(5px);
+  border: 2px solid rgba(255, 255, 255, 0.151);
+}
+.left > h1 {
+  font-weight: 600;
+  font-size: 20px;
+  color: rgb(17, 17, 17);
   text-align: center;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  font-weight: 500;
-  font-size: 32px;
 }
-.file {
-  width: 60%;
-  border: 1px solid rgb(151, 151, 151);
-  padding: 8px 20px;
-  border-radius: 5px;
-  font-family: "poppins", sans-serif;
+.label {
+  margin-top: 80px;
+  height: 60%;
+  width: 90%;
+  margin-left: 5%;
+  border-radius: 40px;
+  backdrop-filter: blur(5px);
+  display: flex;
+  background-color: black;
+  flex-direction: column;
+  gap: 12px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
-.btn {
+.label>img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+.label:hover .img-icon{
+  color: rgb(228, 236, 234);
+}
+.label:hover p{
+  color: rgb(228, 236, 234);
+}
+.img-icon {
+  font-size: 30px;
+  color: rgba(228, 236, 234, 0.658);
+}
+.left > input {
+  margin-top: 50px;
   padding: 10px 20px;
-  width: calc(60% + 44px);
-  background-color: rgb(0, 102, 255);
+  width: 90%;
+  margin-left: 5%;
+  background-color: black;
   color: white;
-  border-radius: 5px;
+  border-radius: 100px;
   outline: none;
   border: none;
   cursor: pointer;
   font-family: "poppins", sans-serif;
 }
-.progress {
-  text-align: center;
-  margin-bottom: -150px;
+.label > p {
+  font-size: 13px;
+  font-weight: 300;
+  color: rgba(228, 236, 234, 0.658);
 }
-.textarea {
-  width: 100%;
-  height: 50%;
+.right {
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+}
+
+.pro{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+.result{
+  width: 80%;
+  display: flex;
+  gap: 50px;
+  flex-direction: column;
+}
+.textarea{
   padding: 10px;
   border: none;
   outline: none;
-  border-radius: 5px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.034);
+  color: white;
   font-family: "poppins", sans-serif;
-}
-@media (max-width: 600px) {
-  .textarea {
-    width: 94%;
-  }
-}
-.img {
-  width: 800px;
-  height: 300px;
-  object-fit: cover;
-  object-position: center;
-  border-radius: 5px;
-  padding: 10px;
 }
 .btn-one {
   width: 100%;
   padding: 10px 20px;
   background-color: rgb(0, 102, 255);
   color: white;
-  border-radius: 5px;
+  border-radius: 100px;
   outline: none;
   border: none;
   cursor: pointer;
@@ -92,8 +148,6 @@ body {
 }
 .voice {
   display: flex;
-  /* justify-content: space-between; */
-  /* align-items: center; */
   width: 100%;
   gap: 10px;
 }
@@ -109,4 +163,3 @@ body {
   justify-content: center;
   align-items: center;
 }
-
