--- a/src/index.css
+++ b/src/index.css
@@ -13,27 +13,27 @@ body {
   flex-direction: row;
   gap: 10px;
 }
-@media (max-width : 1000px){
-  .main-container{
+@media (max-width: 1000px) {
+  .main-container {
     flex-direction: column;
   }
-  .left{
+  .left {
     min-width: calc(100% - 5px);
     min-height: 630px;
   }
-  .btn{
+  .btn {
     font-size: 24px;
   }
-  .right{
+  .right {
     margin: 40px 0px;
     min-width: calc(100% - 5px);
   }
-  .voice{
+  .voice {
     margin-bottom: 40px;
   }
 }
-@media (max-width : 600px){
-  .btn{
+@media (max-width: 600px) {
+  .btn {
     font-size: 17px;
   }
 }
@@ -43,7 +43,6 @@ body {
   height: calc(100% - 20px);
   color: black;
   border-radius: 10px;
-  backdrop-filter: blur(5px);
   border: 2px solid rgba(255, 255, 255, 0.151);
 }
 .left > h1 {
@@ -53,7 +52,7 @@ body {
   text-align: center;
 }
 .label {
-  margin-top: 80px;
+  margin-top: 50px;
   height: 60%;
   width: 90%;
   margin-left: 5%;
@@ -69,17 +68,29 @@ body {
   position: relative;
   overflow: hidden;
 }
-.label>img{
+.left>select{
+  width: 90%;
+  border-radius: 100px;
+  background-color: black;
+  color: white;
+  border: none;
+  outline: none;
+  margin-left: 5%;
+  font-family: "poppins", sans-serif;
+  padding: 10px 20px;  
+  margin-top: 20px;
+}
+.label > img {
   position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
 }
-.label:hover .img-icon{
+.label:hover .img-icon {
   color: rgb(228, 236, 234);
 }
-.label:hover p{
+.label:hover p {
   color: rgb(228, 236, 234);
 }
 .img-icon {
@@ -87,7 +98,7 @@ body {
   color: rgba(228, 236, 234, 0.658);
 }
 .left > input {
-  margin-top: 50px;
+  margin-top: 20px;
   padding: 10px 20px;
   width: 90%;
   margin-left: 5%;
@@ -109,24 +120,24 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: calc(100% - 20px);
   background-color: rgb(0, 0, 0);
 }
 
-.pro{
+.pro {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 40px;
 }
-.result{
+.result {
   width: 80%;
   display: flex;
   gap: 50px;
   flex-direction: column;
 }
-.textarea{
+.textarea {
   padding: 10px;
   border: none;
   outline: none;
